Revised CSS and JS from local, updated readme and png

--- a/dpla-search-widget.css
+++ b/dpla-search-widget.css
@@ -1,32 +1,48 @@
 #dpla_search_widget {
-    width: 20%;
+  background-color: #FFFFFF;
+  padding: 5px 5px 10px;
+  margin: 3px;
+  width: 200px;    
+  height: 80px;
+  text-align:left;
 }
+
 #dpla_search_widget,
 #dpla_search_widget input[type=text],
-#dpla_search_widget input[type=submit] {
-    border: 1px solid lightgray;
+#dpla_search_widget input[type=submit] {    
+    border: 1px solid #739AAE;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
+    vertical-align: bottom;    
+    font-family: 'source_sans_pro_semiboldRg',arial,sans-serif;        
+    font-size: 12px;
+    font-weight: normal;    
 }
 
-#dpla_search_widget h5 {
-    text-align: center;
+#dpla_search_widget img {
+  float:none !important;
+  position: relative !important;
+  box-shadow: none !important;
 }
 
-#dpla_search_widget form {
-    padding: 0 0 10px 10px;
+#dpla_search_widget form {  
+    margin: 0;
+    padding: 0 0 5px 5px;
 }
 
 #dpla_search_widget input[type=text] {
-    font-size: .8em;
-    height: 25px;
+    color: #818285;
+    width: 110px !important;    
+    padding: 0 0 0 10px;  
+    height: 25px;    
 }
 
 #dpla_search_widget input[type=submit] {
+    cursor: pointer;
     color: white;
-    font-size: .8em;
-    background-color: blue;
-    border-color: blue;
+    background-color: #739AAE;
     margin-left: 5px;
+    width: 60px;
+    height: 25px;    
 }
